2007-04-24  Chris Lumens  <clumens@redhat.com>

	* pykickstart/version.py (stringToVersion):  Better regexes for
	splitting strings into family and version.

2007-04-13  Chris Lumens  <clumens@redhat.com>

	* pykickstart.spec, setup.py:  This is pykickstart version 1.0.

	* docs/programmers-guide:  Update documentation.

2007-04-12  Chris Lumens  <clumens@redhat.com>

	* docs/programmers-guide:  Update documentation.

	* pykickstart/base.py (DeprecatedCommand):  This should be an abstract
	class.

2007-03-30  Chris Lumens  <clumens@redhat.com>

	* pykickstart/parser.py (KickstartParser.readKickstart):  Use
	urlgrabber so %include files can be URLs (#234351).

2007-03-19  Chris Lumens  <clumens@redhat.com>

	* pykickstart.spec, setup.py:  New version.

2007-03-16  Chris Lumens  <clumens@redhat.com>

	* pykickstart/commands/bootloader.py:  Increase writePriority number
	so this comes after upgrade/install.

2007-03-12  Chris Lumens  <clumens@redhat.com>

	* pykickstart/base.py (BaseHandler._setCommand):  Treat class names as
	unicode strings so lower() works in all locales (#231053).

2007-03-07  Chris Lumens  <clumens@redhat.com>

	* pykickstart.spec, setup.py:  New version.

2007-03-07  Chris Lumens  <clumens@redhat.com>

	* pykickstart/commands/timezone.py:  The timezone command didn't
	understand --isUtc before FC6 (#231189).

	* pykickstart/parser.py (KickstartParser._stateMachine):  Recognize
	%ksappend so ksvalidator works.

	* po/:  Update translation files.

2007-03-01  Chris Lumens  <clumens@redhat.com>

	* pykickstart/commands/bootloader.py, pykickstart/commands/clearpart.py,
	pykickstart/commands/displaymode.py, pykickstart/commands/firewall.py,
	pykickstart/commands/firstboot.py, pykickstart/commands/langsupport.py,
	pykickstart/commands/logging.py, pykickstart/commands/reboot.py,
	pykickstart/commands/selinux.py, pykickstart/commands/upgrade.py:
	Don't set default values so a newly created kickstart handler object