@@ -286,6 +286,55 @@ commandMap = {
         "zfcp": zfcp.FC3_ZFCP,
     },
 
+    # based on fc1
+    RHEL3: {
+        "auth": authconfig.FC3_Authconfig,
+        "authconfig": authconfig.FC3_Authconfig,
+        "autopart": autopart.FC3_AutoPart,
+        "autostep": autostep.FC3_AutoStep,
+        "bootloader": bootloader.FC3_Bootloader,
+        "cdrom": method.FC3_Method,
+        "clearpart": clearpart.FC3_ClearPart,
+        "cmdline": displaymode.FC3_DisplayMode,
+        "device": device.FC3_Device,
+        "deviceprobe": deviceprobe.FC3_DeviceProbe,
+        "driverdisk": driverdisk.FC3_DriverDisk,
+        "firewall": firewall.FC3_Firewall,
+        "firstboot": firstboot.FC3_Firstboot,
+        "graphical": displaymode.FC3_DisplayMode,
+        "halt": reboot.FC3_Reboot,
+        "harddrive": method.FC3_Method,
+        "ignoredisk": ignoredisk.FC3_IgnoreDisk,
+        "install": upgrade.FC3_Upgrade,
+        "interactive": interactive.FC3_Interactive,
+        "keyboard": keyboard.FC3_Keyboard,
+        "lang": lang.FC3_Lang,
+        "langsupport": langsupport.FC3_LangSupport,
+        "lilo": bootloader.FC3_Bootloader,
+        "lilocheck": lilocheck.FC3_LiloCheck,
+        "logvol": logvol.FC3_LogVol,
+        "monitor": monitor.FC3_Monitor,
+        "mouse": mouse.RHEL3_Mouse,
+        "network": network.RHEL4_Network,
+        "nfs": method.FC3_Method,
+        "part": partition.FC3_Partition,
+        "partition": partition.FC3_Partition,
+        "poweroff": reboot.FC3_Reboot,
+        "raid": raid.FC3_Raid,
+        "reboot": reboot.FC3_Reboot,
+        "rootpw": rootpw.FC3_RootPw,
+        "shutdown": reboot.FC3_Reboot,
+        "skipx": skipx.FC3_SkipX,
+        "text": displaymode.FC3_DisplayMode,
+        "timezone": timezone.FC3_Timezone,
+        "upgrade": upgrade.FC3_Upgrade,
+        "url": method.FC3_Method,
+        "vnc": vnc.FC3_Vnc,
+        "volgroup": volgroup.FC3_VolGroup,
+        "xconfig": xconfig.FC3_XConfig,
+        "zerombr": zerombr.FC3_ZeroMbr,
+    },
+
     # based on fc3
     RHEL4: {
         "auth": authconfig.FC3_Authconfig,
@@ -451,6 +500,14 @@ dataMap = {
         "RaidData": raid.F7_RaidData,
         "RepoData": repo.FC6_RepoData,
         "UserData": user.FC6_UserData,
+        "VolGroupData": volgroup.FC3_VolGroupData,
+        "ZFCPData": zfcp.FC3_ZFCPData,
+    },
+    RHEL3: {
+        "LogVolData": logvol.FC4_LogVolData,
+        "NetworkData": network.RHEL4_NetworkData,
+        "PartData": partition.FC3_PartData,
+        "RaidData": raid.FC3_RaidData,
         "VolGroupData": volgroup.FC3_VolGroupData,
         "ZFCPData": zfcp.FC3_ZFCPData,
     },
